--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -82,7 +82,7 @@ html, body {
     background: #fff;
 }
 .header-bg{
-    background: #a5a5a5;
+    background: #808080;
 }
 .home article {
     margin-bottom: 0px;
@@ -1031,6 +1031,7 @@ legend{
 .company-name{
     color: #fff;
     font-size: 42px;
+    font-weight: bold;
 }
 .tag-line{
     color: #fff;
@@ -1040,7 +1041,7 @@ legend{
     opacity: 1;
 }
 .navbar-custom{
-    border: 1px solid #a5a5a5;
+    border: 1px solid #808080;
     border-radius: 0;
     margin-bottom: 0px;
     margin-top: 5px;
